Fix upload loading icon alignment

--- a/components/com_jce/editor/libraries/css/src/filebrowser/upload.css
+++ b/components/com_jce/editor/libraries/css/src/filebrowser/upload.css
@@ -28,8 +28,8 @@ div#upload-queue-block {
 }
 
 #upload-options .uk-form-row {
-    margin-bottom: 0.5em;
-    margin-top: 0;
+	margin-bottom: 0.5em;
+	margin-top: 0;
 }
 
 .queue-item-loading .queue-item-name input {
@@ -47,7 +47,7 @@ div#upload-queue-block {
 	box-sizing: border-box;
 	display: inline-block;
 	vertical-align: middle;
-	top: -1px;
+	top: -0.375em;
 	position: relative;
 }
 
@@ -61,13 +61,25 @@ div#upload-queue-block {
 	}
 }
 
-.uk-progress {margin: 5px 0; box-shadow: inherit; background-color: transparent; display: none;}
-.queue-item-loading .uk-progress {display: block;}
-.uk-alert {white-space: normal;margin: 5px 0;}
+.uk-progress {
+	margin: 5px 0;
+	box-shadow: inherit;
+	background-color: transparent;
+	display: none;
+}
+
+.queue-item-loading .uk-progress {
+	display: block;
+}
+
+.uk-alert {
+	white-space: normal;
+	margin: 5px 0;
+}
 
 .queue-item-size {
-		vertical-align: middle;
-		line-height: 32px;
+	vertical-align: middle;
+	line-height: 32px;
 }
 
 .queue-item .queue-item-name .queue-item-extension {
@@ -101,9 +113,11 @@ div#upload-queue-block {
 	height: 100%;
 }
 
-::-ms-clear {display: none;}
+::-ms-clear {
+	display: none;
+}
 
-.wf-upload-dragover > div {
+.wf-upload-dragover>div {
 	border-width: 2px !important;
 }
 
